--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
   
     // カメラを作成
     var camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
+    
+    var textureLoader = new THREE.TextureLoader();
+    var texture = textureLoader.load("pattern-1929506_1280.png");
+    var mat = new THREE.MeshPhongMaterial();
+    mat.map = texture;
   
     // 箱を作成
     var geometry = new THREE.BoxGeometry(1, 1, 1);
-    var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-    var box = new THREE.Mesh(geometry, material);
+    //var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
+    //var box = new THREE.Mesh(geometry, material);
+    var box = new THREE.Mesh(geometry, mat);
     box.position.z = -5;
     scene.add(box);
   
