--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     var texture = textureLoader.load("pattern-1929506_1280.png");
     var mat = new THREE.MeshPhongMaterial();
     mat.map = texture;
+    
+    // バンプマップ読み込み
+    var bump = textureLoader.load("pattern-1929506_1280.jpg");
+    mat.bumpMap = bump;
+    mat.bumpscale = 0.2;
   
     // 箱を作成
     var geometry = new THREE.BoxGeometry(1, 1, 1);
